[gd_scene load_steps=7 format=3 uid="uid://nhc2no6rgyca"]

[ext_resource type="Script" path="res://scenes/card_stack_ui.gd" id="1_8u01d"]
[ext_resource type="Script" path="res://scenes/ace_pile.gd" id="1_vfu16"]
[ext_resource type="Script" path="res://types/empty_spot.gd" id="2_3a5d8"]
[ext_resource type="Script" path="res://types/droppable.gd" id="3_8xaba"]
[ext_resource type="Shape2D" uid="uid://b53kt7hfoptw0" path="res://scenes/standard_collision_rectangle.tres" id="5_3xnlr"]
[ext_resource type="Script" path="res://types/card_counter.gd" id="6_n31ay"]

[node name="AcePile" type="Node2D"]
script = ExtResource("1_vfu16")

[node name="EmptySpot" type="Node2D" parent="."]
script = ExtResource("2_3a5d8")
type = 3
color = Color(0, 0.305882, 0.0941176, 1)
metadata/_edit_lock_ = true

[node name="CardStackUI" type="Node2D" parent="."]
script = ExtResource("1_8u01d")
open = true
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="." node_paths=PackedStringArray("control_node")]
script = ExtResource("3_8xaba")
control_node = NodePath("..")
align_dropped_item = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Droppable"]
shape = ExtResource("5_3xnlr")
metadata/_edit_lock_ = true

[node name="CardCounter" type="Node2D" parent="."]
script = ExtResource("6_n31ay")

[connection signal="received_drop" from="Droppable" to="." method="_on_received_drop"]
